# rustic

./: .gitignore  Cargo.toml  README.md
grrs/: Cargo.toml
grrs/src/: main.rs  test.txt
linkedin/card_hand/: Cargo.toml
linkedin/card_hand/src/: main.rs
linkedin/casei_sort/: Cargo.toml
linkedin/casei_sort/src/: main.rs
linkedin/lesson3/src/: main.rs
linkedin/median/src/: main.rs
linkedin/morse_code/src/: main.rs
linkedin/print_any_text/: Cargo.toml
linkedin/print_any_text/src/: main.rs
linkedin/sandbox/src/: main.rs
linkedin/sum_cli/: Cargo.toml
linkedin/sum_cli/src/: main.rs
linkedin/unique_items/src/: main.rs
sandbox/count_words/: bacon.txt
sandbox/count_words/src/: main.rs
the_book/enums/src/: main.rs
the_book/generics/src/: main.rs
the_book/guessing_game/src/: main.rs
the_book/ownership/src/: main.rs
the_book/structs/src/: main.rs
the_book/traits/src/: lib.rs  main.rs
