[workspace]

members = [
  "the_book/enums",
  "the_book/generics",
  "the_book/guessing_game",
  "the_book/ownership",
  "the_book/structs",
  "the_book/traits",
  "linkedin/card_hand",
  "linkedin/casei_sort",
  "linkedin/median",
  "linkedin/morse_code",
  "linkedin/print_any_text",
  "linkedin/sandbox",
  "linkedin/sum_cli",
  "linkedin/unique_items",
  "sandbox/count_words"
]
